# CFXLabs-assesment

./: Anchor.toml
programs/CFXLabs-assesment/: Cargo.toml
programs/CFXLabs-assesment/src/: lib.rs
tests/: CFXLabs-assesment.ts
